--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zen class!></title>
-
+<link rel="stylesheet" href="/css/index.css">
+</head>
     
 </body>
-<form action="" method="GET">
+<!-- <form action="" method="GET">
     <img src="catPic.jpg" alt="image of muthu" width="120px" height="150px">
     <label for="firstName"> First Name</label>
     <input type="text" name="firstName" placeholder="enter first name:"><br>
@@ -21,5 +22,34 @@
 
     <input type="submit" value="submit">
 
-</form>
+</form> -->
+
+<div id="id1">
+    <div id="text">
+        muthu
+    </div>
+</div>
+
+
+
+
+<!-- 
+<header>
+    <ul>
+        <li><a href="#">HOME</a></li>
+        <li><a href="#">EMPLYMENT</a></li>
+        <li><a href="#">ABOUT US</a></li>
+        <li><a href="#">GUVI</a></li>
+        <li><a href="#">CONTACT US</a></li>
+    </ul>
+    </header>
+    <nav id="left_nav_bar">
+        <ul>
+            <li><a href="#"">ADMIN</a></li>
+             <li><a href="#"">STUDENTS</a></li>
+                 <li><a href="#"">TEACHERS</a></li>
+        </ul>
+    </nav>
+
+  -->
 </html>
